corrected the nav icon on mobile version

--- a/new with json/Css/project_portfolio_style.css
+++ b/new with json/Css/project_portfolio_style.css
@@ -74,6 +74,10 @@ nav div ul{
 	.hide-m{
 		display: none;
 	}
+	nav{
+		margin-top: -9px;
+		margin-left: 0px;
+	}
 }
 
 /*grid for tablets: */
